[gd_scene load_steps=2 format=3 uid="uid://duxydd855lkcn"]

[ext_resource type="Script" path="res://scripts/Hangar.gd" id="1_hangar"]

[node name="Hangar" type="Node2D"]
script = ExtResource("1_hangar")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Title" type="Label" parent="UI"]
offset_left = 100.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 32
text = "Hangar"

[node name="BackButton" type="Button" parent="UI"]
offset_left = 50.0
offset_top = 650.0
offset_right = 200.0
offset_bottom = 700.0
theme_override_font_sizes/font_size = 20
text = "← Back to StarMap"

[node name="BarracksPanel" type="Panel" parent="UI"]
offset_left = 50.0
offset_top = 80.0
offset_right = 700.0
offset_bottom = 230.0

[node name="PanelBackground" type="ColorRect" parent="UI/BarracksPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.4, 0.4, 1)

[node name="BarracksLabel" type="Label" parent="UI/BarracksPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = 25.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "Barracks - Available Pilots"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UI/BarracksPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 30.0
offset_right = -10.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2

[node name="PilotGrid" type="GridContainer" parent="UI/BarracksPanel/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 8

[node name="NextPilotPageButton" type="Button" parent="UI/BarracksPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -35.0
offset_right = -10.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 14
text = "Next →"

[node name="PrevPilotPageButton" type="Button" parent="UI/BarracksPanel"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -35.0
offset_right = 110.0
offset_bottom = -5.0
grow_vertical = 0
theme_override_font_sizes/font_size = 14
text = "← Prev"

[node name="PilotPageLabel" type="Label" parent="UI/BarracksPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -30.0
offset_right = 50.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Page 1 / 1"
horizontal_alignment = 1

[node name="ShipPanel" type="Panel" parent="UI"]
offset_left = 720.0
offset_top = 50.0
offset_right = 1060.0
offset_bottom = 670.0

[node name="PanelBackground" type="ColorRect" parent="UI/ShipPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.4, 0.4, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="UI/ShipPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShipGrid" type="GridContainer" parent="UI/ShipPanel/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 15
columns = 3

[node name="NextPageButton" type="Button" parent="UI/ShipPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -45.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "Next Page →"

[node name="PrevPageButton" type="Button" parent="UI/ShipPanel"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -45.0
offset_right = 120.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "← Prev Page"

[node name="PageLabel" type="Label" parent="UI/ShipPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 265.0
offset_right = 50.0
offset_bottom = 290.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "Page 1 / 2"
horizontal_alignment = 1
